--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,20 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+.env.production
+.eslintcache
+
+# Testing
+coverage/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+firebase-debug.log*
+firebase-error.log*
+.firebase/*
 
 npm-debug.log*
 yarn-debug.log*
