--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.env
-.env.production
+/.env
+/.env.production
 .eslintcache
 
 # Testing
@@ -30,7 +30,6 @@ yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
 firebase-error.log*
-.firebase/*
 
 npm-debug.log*
 yarn-debug.log*
