--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/.env
-/.env.production
+.env
+.env.production
 .eslintcache
 
 # Testing
